--- a/NubeBooks/Views/Admin/Categorias.cshtml
+++ b/NubeBooks/Views/Admin/Categorias.cshtml
@@ -19,13 +19,14 @@
     @Scripts.Render("~/Content/themes/admin/js/nestable/demo.js")
 
     <script type="text/javascript">
+        var miBaseUrl = '';
         $(function () {
-            $('#grupoPeriodos li a').on('click', function (event) {
-                //console.log($(this).text());
-                var pPeriodo = $(this).attr('id');
-                //console.log(pPeriodo);
-                actualizarPeriodo(pPeriodo);
-            });
+            miBaseUrl = baseURL(window.location.pathname);
+        });
+
+        $('#grupoPeriodos li a').on('click', function (event) {
+            var pPeriodo = $(this).attr('id');
+            actualizarPeriodo(pPeriodo);
         });
 
         var defaultText = '0';
@@ -92,7 +93,7 @@
         function actualizarPeriodo(idPeriodo) {
             $.ajax({
                 type: "POST",
-                url: "/Admin/ActualizarPeriodo",
+                url: miBaseUrl + "/ActualizarPeriodo",
                 cache: false,
                 data: { idPeriodo: idPeriodo },
                 dataType: 'text',
@@ -108,7 +109,7 @@
         function actualizarPresupuesto(idCategoria, Monto) {
             $.ajax({
                 type: "POST",
-                url: "/Admin/ActualizarPresupuesto",
+                url: miBaseUrl + "/ActualizarPresupuesto",
                 cache: false,
                 data: { idCategoria: idCategoria, Monto: Monto },
                 dataType: 'json',
