--- a/NubeBooks/Views/Admin/Comprobantes.cshtml
+++ b/NubeBooks/Views/Admin/Comprobantes.cshtml
@@ -17,56 +17,52 @@
     @Scripts.Render("~/Content/themes/admin/js/datatables/languageConf.js")
 
     <script type="text/javascript">
+        var miBaseUrl = '';
         $(function () {
+            miBaseUrl = baseURL(window.location.pathname);
             $('.dataTable').DataTable();
+        });
 
-            $('#idreporte').click(function () {
-                var miURL = "/Admin/Comprobantes";
-                $('.titulo').each(function (index) {
-                    if ($(this).hasClass('active'))
-                    { miURL = exportarDetalle(index + 1); }
-                })
-                this.href = miURL;
-            });
+        $('#idreporte').click(function () {
+            //var miURL = "/Admin/Comprobantes";
+            var miURL = miBaseUrl + "/Comprobantes";
+            $('.titulo').each(function (index) {
+                if ($(this).hasClass('active'))
+                { miURL = exportarDetalle(index + 1); }
+            })
+            this.href = miURL;
+        });
 
-            $('#modal-form').on('show.bs.modal', function (e) {
-                //if (!data) return e.preventDefault()
-                var button = $(e.relatedTarget);
-                var idElement = button.data('id');
-                var nroDocumento = button.data('nro');
-                var modal = $(this);
-                modal.find('.modal-title').text('Eliminar Elemento: ' + nroDocumento);
-                modal.find('.modal-body input').val(idElement);
-            });
+        $('#modal-form').on('show.bs.modal', function (e) {
+            var button = $(e.relatedTarget);
+            var idElement = button.data('id');
+            var nroDocumento = button.data('nro');
+            var modal = $(this);
+            modal.find('.modal-title').text('Eliminar Elemento: ' + nroDocumento);
+            modal.find('.modal-body input').val(idElement);
+        });
 
-            $("input#delete").click(function () {
-                var idelement = $('form.element').serialize();
-                $.ajax({
-                    type: "POST",
-                    url: "/Admin/DeleteComprobante",
-                    data: $('form.element').serialize(),
-                    success: function (msg) {
-                        //$("#thanks").html(msg)
-                        $("#modal-form").modal('hide');
-                        window.location.href = "/Admin/Comprobantes";
-                        //window.location.reload();
-                    },
-                    error: function () {
-                        alert("failure");
-                    }
-                });
+        $("input#delete").click(function () {
+            var idelement = $('form.element').serialize();
+            $.ajax({
+                type: "POST",
+                url: miBaseUrl + "/DeleteComprobante",
+                data: $('form.element').serialize(),
+                success: function (msg) {
+                    $("#modal-form").modal('hide');
+                    window.location.href = miBaseUrl + "/Comprobantes";
+                },
+                error: function () {
+                    alert("failure");
+                }
             });
-            //$('.open-modal').click(function (e) {
-            //    e.preventDefault();
-            //    $('#modal-form').dialog();
-            //});
         });
 
         function exportarDetalle(tipoComprobante) {
             var FechaInicio = $("#FechaInicio").val().split("/"); FechaInicio = FechaInicio[2] + "/" + FechaInicio[1] + "/" + FechaInicio[0];
             var FechaFin = $("#FechaFin").val().split("/"); FechaFin = FechaFin[2] + "/" + FechaFin[1] + "/" + FechaFin[0];
 
-            return "/Admin/ExportarComprobantes/?idTipoComprobante=" + tipoComprobante + "&" + "FechaInicio=" + encodeURIComponent(FechaInicio) + "&" + "FechaFin=" + encodeURIComponent(FechaFin);
+            return miBaseUrl + "/ExportarComprobantes/?idTipoComprobante=" + tipoComprobante + "&" + "FechaInicio=" + encodeURIComponent(FechaInicio) + "&" + "FechaFin=" + encodeURIComponent(FechaFin);
         }
 
         function getSectionActive() {
